fixing spacing

--- a/src/components/EmaiFormHome/email-form.module.scss
+++ b/src/components/EmaiFormHome/email-form.module.scss
@@ -15,6 +15,7 @@
         border: 0;
         margin: 0 10px 0 0;
         font-size: 22px;
+        margin-bottom: 10px;
 
         @include phone() {
             width: 100%;
